--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start:dev": "webpack serve",
+    "build": "webpack serve",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +35,33 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.tsx",
+  "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.4",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.14.5",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^4.5.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.4.2",
+    "webpack-cli": "^4.8.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Milanochka/dapplets-react.git"
+  },
+  "author": "bolotskaya milana",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Milanochka/dapplets-react/issues"
+  },
+  "homepage": "https://github.com/Milanochka/dapplets-react#readme"
 }
